@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020 Red Hat, Inc.
+ * Copyright Red Hat, Inc.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -24,11 +24,6 @@ import static org.candlepin.subscriptions.db.model.Granularity.*;
 import static org.candlepin.subscriptions.utilization.api.model.ProductId.*;
 import static org.junit.jupiter.api.Assertions.*;
 
-import org.candlepin.subscriptions.utilization.api.model.ProductId;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
@@ -36,164 +31,206 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.candlepin.subscriptions.json.Measurement;
+import org.candlepin.subscriptions.utilization.api.model.ProductId;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 class ProductProfileRegistryTest {
 
-    private ProductProfileRegistry registry;
+  private ProductProfileRegistry registry;
 
-    @BeforeEach
-    void setUp() {
-        registry = new ProductProfileRegistry();
+  @BeforeEach
+  void setUp() {
+    registry = new ProductProfileRegistry();
 
-        Set<SubscriptionWatchProduct> ids1 = Set.of(
+    Set<SubscriptionWatchProduct> ids1 =
+        Set.of(
             makeId("1", Set.of(RHEL)),
             makeId("2", Set.of(RHEL, RHEL_COMPUTE_NODE)),
-            makeId("3", Set.of(RHEL, RHEL_FOR_X86))
-        );
-        ProductProfile p1 = new ProductProfile("p1", ids1, DAILY);
+            makeId("3", Set.of(RHEL, RHEL_FOR_X86)));
+    ProductProfile p1 = new ProductProfile("p1", ids1, DAILY);
 
-        Set<SubscriptionWatchProduct> ids2 = Set.of(
+    Set<SubscriptionWatchProduct> ids2 =
+        Set.of(
             makeId("4", Set.of(SATELLITE)),
             makeId("5", Set.of(SATELLITE, SATELLITE_SERVER)),
-            makeId("6", Set.of(SATELLITE, SATELLITE_CAPSULE))
-        );
-        ProductProfile p2 = new ProductProfile("p2", ids2, HOURLY);
+            makeId("6", Set.of(SATELLITE, SATELLITE_CAPSULE)));
+    ProductProfile p2 = new ProductProfile("p2", ids2, HOURLY);
 
-        Set<SubscriptionWatchProduct> ids3 = Set.of(
-            makeId("7", Set.of(OPENSHIFT_CONTAINER_PLATFORM))
-        );
-        ProductProfile p3 = new ProductProfile("p3", ids3, DAILY);
+    Set<SubscriptionWatchProduct> ids3 = Set.of(makeId("7", Set.of(OPENSHIFT_CONTAINER_PLATFORM)));
+    ProductProfile p3 = new ProductProfile("p3", ids3, DAILY);
 
-        ProductProfile p4 = new ProductProfile("p4", Collections.emptySet(), DAILY);
-        p4.setSyspurposeRoles(Set.of(
+    ProductProfile p4 = new ProductProfile("p4", Collections.emptySet(), DAILY);
+    p4.setSyspurposeRoles(
+        Set.of(
             makeRole("os-metrics", Set.of(OPENSHIFT_METRICS)),
-            makeRole("ocp", Set.of(OPENSHIFT_DEDICATED_METRICS))
-        ));
-        registry.addProductProfile(p1);
-        registry.addProductProfile(p2);
-        registry.addProductProfile(p3);
-        registry.addProductProfile(p4);
-    }
+            makeRole("ocp", Set.of(OPENSHIFT_DEDICATED_METRICS))));
 
-    SubscriptionWatchProduct makeId(String engineeringProductId, Set<ProductId> productIds) {
-        SubscriptionWatchProduct productId = new SubscriptionWatchProduct();
-        productId.setEngProductId(engineeringProductId);
-        productId.setSwatchProductIds(productIds.stream()
-            .map(ProductId::toString)
-            .collect(Collectors.toSet()));
-        return productId;
-    }
+    ProductProfile p5 = new ProductProfile("p5", Collections.emptySet(), HOURLY);
 
-    SyspurposeRole makeRole(String name, Set<ProductId> swatchProdIds) {
-        SyspurposeRole role = new SyspurposeRole();
-        role.setName(name);
-        role.setSwatchProductIds(swatchProdIds.stream().map(ProductId::toString).collect(Collectors.toSet()));
-        return role;
-    }
-    @Test
-    void testValidateProductGranularityTooFine() {
-        assertThrows(IllegalStateException.class, () -> registry.validateGranularityCompatibility(RHEL,
-            HOURLY));
-    }
+    p5.setMarketplaceMetrics(
+        Set.of(
+            new MarketplaceMetric(
+                "redhat.com:openshiftdedicated:cpu_hour",
+                Measurement.Uom.CORES.toString(),
+                Set.of(OPENSHIFT_DEDICATED_METRICS.toString()))));
 
-    @Test
-    void testValidateProductGranularityEqual() {
-        assertDoesNotThrow(() -> registry.validateGranularityCompatibility(RHEL, DAILY));
-    }
+    ProductProfile p6 = new ProductProfile("p6", Collections.emptySet(), HOURLY);
+    p6.setSwatchProductsByOfferingProductNames(
+        Set.of(
+            new SwatchProductByOfferingProductName("OpenShift Dedicated", "OpenShift-dedicated"),
+            new SwatchProductByOfferingProductName(
+                "OpenShift Container Platform", "OpenShift-container-platform")));
 
-    @Test
-    void testValidateProductGranularityCoarser() {
-        assertDoesNotThrow(() -> registry.validateGranularityCompatibility(RHEL, YEARLY));
-    }
+    registry.addProductProfile(p1);
+    registry.addProductProfile(p2);
+    registry.addProductProfile(p3);
+    registry.addProductProfile(p4);
+    registry.addProductProfile(p5);
+    registry.addProductProfile(p6);
+  }
 
-    @Test
-    void testFindProfileForProductId() {
-        assertEquals("p1", registry.findProfileForSwatchProductId("RHEL").getName());
-    }
+  SubscriptionWatchProduct makeId(String engineeringProductId, Set<ProductId> productIds) {
+    SubscriptionWatchProduct productId = new SubscriptionWatchProduct();
+    productId.setEngProductId(engineeringProductId);
+    productId.setSwatchProductIds(
+        productIds.stream().map(ProductId::toString).collect(Collectors.toSet()));
+    return productId;
+  }
 
-    @Test
-    void testFindProfileForProduct() {
-        assertEquals("p2", registry.findProfileForEngProductId("4").getName());
-    }
+  SyspurposeRole makeRole(String name, Set<ProductId> swatchProdIds) {
+    SyspurposeRole role = new SyspurposeRole();
+    role.setName(name);
+    role.setSwatchProductIds(
+        swatchProdIds.stream().map(ProductId::toString).collect(Collectors.toSet()));
+    return role;
+  }
 
-    @Test
-    void testListProfiles() {
-        Set<String> expected = Set.of("p1", "p2", "p3", "p4");
-        Set<String> actual = registry.listProfiles();
-        assertEquals(expected, actual);
-    }
+  @Test
+  void testValidateProductGranularityTooFine() {
+    assertThrows(
+        IllegalStateException.class, () -> registry.validateGranularityCompatibility(RHEL, HOURLY));
+  }
 
-    @Test
-    void testGetAllProductProfiles() {
-        Set<ProductProfile> profiles = registry.getAllProductProfiles();
-        assertEquals(4, profiles.size());
-        assertEquals(Set.of(HOURLY, DAILY),
-            profiles.stream().map(ProductProfile::getFinestGranularity).collect(Collectors.toSet()));
-    }
+  @Test
+  void testValidateProductGranularityEqual() {
+    assertDoesNotThrow(() -> registry.validateGranularityCompatibility(RHEL, DAILY));
+  }
 
-    @Test
-    void testReturnsDefault() {
-        ProductProfile actual = registry.findProfileForSwatchProductId(RHEL_FOR_ARM);
-        ProductProfile expected = ProductProfile.getDefault();
-        assertEquals(actual, expected);
-    }
+  @Test
+  void testValidateProductGranularityCoarser() {
+    assertDoesNotThrow(() -> registry.validateGranularityCompatibility(RHEL, YEARLY));
+  }
 
-    @Test
-    void productsCanExistOnlyOnce() {
-        ProductProfileRegistry r = new ProductProfileRegistry();
+  @Test
+  void testFindProfileForProductId() {
+    assertEquals("p1", registry.findProfileForSwatchProductId("RHEL").getName());
+  }
 
-        String sameProduct = "1";
-        Set<SubscriptionWatchProduct> ids1 = Set.of(
-            makeId(sameProduct, Set.of(RHEL))
-        );
-        ProductProfile p1 = new ProductProfile("p1", ids1, DAILY);
+  @Test
+  void testFindProfileForProduct() {
+    assertEquals("p2", registry.findProfileForEngProductId("4").getName());
+  }
 
-        Set<SubscriptionWatchProduct> ids2 = new HashSet<>(Arrays.asList(
-            makeId(sameProduct, Set.of(SATELLITE))
-        ));
-        ProductProfile p2 = new ProductProfile("p2", ids2, DAILY);
+  @Test
+  void testListProfiles() {
+    Set<String> expected = Set.of("p1", "p2", "p3", "p4", "p5", "p6");
+    Set<String> actual = registry.listProfiles();
+    assertEquals(expected, actual);
+  }
 
-        r.addProductProfile(p1);
-        assertThrows(IllegalStateException.class, () -> r.addProductProfile(p2));
-    }
+  @Test
+  void testGetAllProductProfiles() {
+    Set<ProductProfile> profiles = registry.getAllProductProfiles();
+    assertEquals(6, profiles.size());
+    assertEquals(
+        Set.of(HOURLY, DAILY),
+        profiles.stream().map(ProductProfile::getFinestGranularity).collect(Collectors.toSet()));
+  }
 
-    @Test
-    void productIdsCanExistOnlyOnce() {
-        ProductProfileRegistry r = new ProductProfileRegistry();
+  @Test
+  void testReturnsDefault() {
+    ProductProfile actual = registry.findProfileForSwatchProductId(RHEL_FOR_ARM);
+    ProductProfile expected = ProductProfile.getDefault();
+    assertEquals(actual, expected);
+  }
 
-        Set<ProductId> sameProductId = Set.of(RHEL);
-        Set<SubscriptionWatchProduct> ids1 = Set.of(
-            makeId("1", sameProductId)
-        );
-        ProductProfile p1 = new ProductProfile("p1", ids1, DAILY);
+  @Test
+  void productsCanExistOnlyOnce() {
+    ProductProfileRegistry r = new ProductProfileRegistry();
 
-        Set<SubscriptionWatchProduct> ids2 = new HashSet<>(Arrays.asList(
-            makeId("2", sameProductId)
-        ));
-        ProductProfile p2 = new ProductProfile("p2", ids2, DAILY);
+    String sameProduct = "1";
+    Set<SubscriptionWatchProduct> ids1 = Set.of(makeId(sameProduct, Set.of(RHEL)));
+    ProductProfile p1 = new ProductProfile("p1", ids1, DAILY);
 
-        ProductProfile p3 = new ProductProfile("p3", Collections.emptySet(), DAILY);
-        p3.setSyspurposeRoles(Set.of(
-            makeRole("test_role", sameProductId)
-        ));
+    Set<SubscriptionWatchProduct> ids2 =
+        new HashSet<>(Arrays.asList(makeId(sameProduct, Set.of(SATELLITE))));
+    ProductProfile p2 = new ProductProfile("p2", ids2, DAILY);
 
-        r.addProductProfile(p1);
-        assertThrows(IllegalStateException.class, () -> r.addProductProfile(p2));
-        assertThrows(IllegalStateException.class, () -> r.addProductProfile(p3));
-    }
+    r.addProductProfile(p1);
+    assertThrows(IllegalStateException.class, () -> r.addProductProfile(p2));
+  }
 
-    @Test
-    void mapsSwatchProductIdToProfileByRole() {
-        ProductProfile actual = registry.findProfileForSwatchProductId(OPENSHIFT_METRICS);
-        assertEquals("p4", actual.getName());
-    }
+  @Test
+  void productIdsCanExistOnlyOnce() {
+    ProductProfileRegistry r = new ProductProfileRegistry();
 
-    @Test
-    void mapsProfileByName() {
-        Stream.of("p1", "p2", "p3", "p4").forEach(n -> {
-            Optional<ProductProfile> profile = registry.getProfileByName(n);
-            assertTrue(profile.isPresent(), "Profile not found with name: " + n);
-            assertEquals(n, profile.get().getName());
-        });
-    }
+    Set<ProductId> sameProductId = Set.of(RHEL);
+    Set<SubscriptionWatchProduct> ids1 = Set.of(makeId("1", sameProductId));
+    ProductProfile p1 = new ProductProfile("p1", ids1, DAILY);
+
+    Set<SubscriptionWatchProduct> ids2 = new HashSet<>(Arrays.asList(makeId("2", sameProductId)));
+    ProductProfile p2 = new ProductProfile("p2", ids2, DAILY);
+
+    ProductProfile p3 = new ProductProfile("p3", Collections.emptySet(), DAILY);
+    p3.setSyspurposeRoles(Set.of(makeRole("test_role", sameProductId)));
+
+    r.addProductProfile(p1);
+    assertThrows(IllegalStateException.class, () -> r.addProductProfile(p2));
+    assertThrows(IllegalStateException.class, () -> r.addProductProfile(p3));
+  }
+
+  @Test
+  void mapsSwatchProductIdToProfileByRole() {
+    ProductProfile actual = registry.findProfileForSwatchProductId(OPENSHIFT_METRICS);
+    assertEquals("p4", actual.getName());
+  }
+
+  @Test
+  void mapsProfileByName() {
+    Stream.of("p1", "p2", "p3", "p4")
+        .forEach(
+            n -> {
+              Optional<ProductProfile> profile = registry.getProfileByName(n);
+              assertTrue(profile.isPresent(), "Profile not found with name: " + n);
+              assertEquals(n, profile.get().getName());
+            });
+  }
+
+  @Test
+  void lookupMetric() {
+    assertEquals(
+        "redhat.com:openshiftdedicated:cpu_hour",
+        registry.lookupMetricId("OpenShift-dedicated-metrics", Measurement.Uom.CORES));
+  }
+
+  @Test
+  void lookupMetricNoMapping() {
+    assertNull(registry.lookupMetricId("OpenShift--metrics", Measurement.Uom.CORES));
+  }
+
+  @Test
+  void lookupSwatchProductByOfferingProductName() {
+    assertEquals(
+        "OpenShift-dedicated", registry.getProductIdByOfferingProductName("OpenShift Dedicated"));
+    assertEquals(
+        "OpenShift-container-platform",
+        registry.getProductIdByOfferingProductName("OpenShift Container Platform"));
+  }
+
+  @Test
+  void lookupSwatchProductByOFferingProductNameNoMapping() {
+    assertNull(registry.getProductIdByOfferingProductName("OpenShift Forthcoming"));
+  }
 }
